added color to the h5 tag

--- a/pathology/templates/pathology/html/job.html
+++ b/pathology/templates/pathology/html/job.html
@@ -16,7 +16,7 @@ Job Vaccancies
           <div class="card-body">
             <h5 class="card-title" style="color:blueviolet;">Profile: {{j.PostName}}</h5>
             <h5 class="card-title" style="color:brown;">Seats Available: {{j.NoOfSeats}}</h5>
-            <h5 class="card-title">Last Date To Apply: {{j.Lastdatetoapply}}</h5>
+            <h5 class="card-title" style="color:aqua;">Last Date To Apply: {{j.Lastdatetoapply}}</h5>
             <h5 class="card-title">Posted On: {{j.Postdate}}</h5>
             <h5 class="card-title">Description: {{j.Description}}</h5>
 
